# ffmpeg-examples-5.1.3

./: CMakeLists.txt  CMakeLists.txt_ORIG  README.md  cmake-simple.cpp  cmake-simple.h  decode_audio.c  decode_audio_ext.c  transcoding.c
.vs_ORIG/: VSWorkspaceState.json  cmake.db  launch.vs.json  slnx.sqlite
.vs_ORIG/cmake-simple/FileContentIndex/: bff387bd-0547-4668-999a-1ebe9d0c0a93.vsidx
.vs_ORIG/cmake-simple/v17/: .wsuo
.vs_ORIG/cmake-simple/v17/ipch/AutoPCH/a175bfba73ed60c6/: CMAKE-SIMPLE.ipch
.vs_ORIG/ffmpeg-examples-5.1.3/FileContentIndex/: 096bef9d-15dc-400d-8b1c-829b04260e74.vsidx  0c2313f0-ec2e-47f1-991e-63104e052525.vsidx  3a8f863f-efc0-425a-b569-5ef05ee0e65c.vsidx  6730ad1c-e81b-4f14-af46-d0099d718556.vsidx  84c69757-4993-4a3a-a310-28b478504a4b.vsidx
.vs_ORIG/ffmpeg-examples-5.1.3/v17/: .wsuo
.vs_ORIG/linux-debug/: -572028335.scan.fgp.copy  707835343.scan.fgp.copy
